kubernetes/5_synapse_workers/4_client_worker/2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: client-workers
  namespace: synapse
spec:
  selector:
    app: client-workers
  ports:
    - name: http
      port: 8083
      targetPort: 8083
    - name: metrics
      port: 9090
      targetPort: 9090
