kubernetes/5_synapse_workers/4_client_worker/3_ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-workers
  namespace: synapse
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`www.greyman.services`) || Host(`greyman.services`)) && (
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/createRoom`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/publicRooms`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/rooms/{(.*)}/joined_members`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/rooms/{(.*)}/context/{(.*)}`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/rooms/{(.*)}/members`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/rooms/{(.*)}/state`) || 
        PathPrefix(`/_matrix/client/v1/rooms/{(.*)}/hierarchy`) || 
        PathPrefix(`/_matrix/client/unstable/org.matrix.msc2716/rooms/{(.*)}/batch_send`) || 
        PathPrefix(`/_matrix/client/unstable/im.nheko.summary/rooms/{(.*)}/summary`) || 
        PathPrefix(`/_matrix/client/{(r0|v3|unstable)}/account/whoami`) || 
        PathPrefix(`/_matrix/client/{(r0|v3|unstable)}/devices`) || 
        PathPrefix(`/_matrix/client/versions`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/voip/turnServer`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/rooms/{(.*)}/event`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/joined_rooms`) || 
        PathPrefix(`/_matrix/client/{(api/v1|r0|v3|unstable)}/search`))
      kind: Rule
      priority: 10
      services:
        - name: client-workers
          port: 8083
      middlewares:
        - name: default-headers
  tls:
    secretName: greyman-services-tls
